--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<h2>Iana & Shane</h2>
 							<p>Are getting married!<br />
-							April 22, 2017<br />
+							April 22, 2017</p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
