--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Iana & Shane</h2>
-							<p>Are getting married!<br />
-							April 22, 2017</p>
+							<p>Are getting married!</p>
+							<p>April 22, 2017</p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
