Edited some text

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Our Story<br />
-								<span class="sub-heading">Best Friends</span></h2>
+								<h2>Our Story</h2>
 								<p>We met on August 19th, 2013 during our first day at a new job. Over time, our friendship grew into something<br />
 								more. During the Spring of 2016, while in Berlin, Shane proposed to Iana in a neighborhood park.<br />
 								She said 'yes'.</p>
