More text changes

--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 									<div id="menu">
 										<ul>
 											<li><a href="#banner">Home</a></li>
-											<li><a href="#one">Where</a></li>
-											<li><a href="#two">When</a></li>
-											<li><a href="#three">Accomodations</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="#one">Our Story</a></li>
+											<li><a href="#two">Where</a></li>
+											<li><a href="#three">Registry</a></li>
 										</ul>
 									</div>
 								</li>
