--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 										<ul>
 											<li><a href="#banner">Home</a></li>
 											<li><a href="#one">Our Story</a></li>
-											<li><a href="#two">Where</a></li>
+											<li><a href="#two">Details</a></li>
 											<li><a href="#three">Registry</a></li>
 										</ul>
 									</div>
