Changed color for date

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<div class="inner">
 							<h2>Iana & Shane</h2>
 							<p>Are getting married!</p>
-							<p>April 22, 2017</p>
+							<p class="orange">April 22, 2017</p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
