--- a/index.html
+++ b/index.html
@@ -85,11 +85,15 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Accommodations<br />
-								<span class="sub-heading">Dana Hotel</span></h2>
-								<p>660 N State Street, Chicago, IL 60654<br />
-								+1 312-202-6097</p>
-								<p>Please be sure to mention the BONEVA-MOORE wedding when making your reservations.</p>
+								<h2>Accommodations</h2>
+								<p><span class="sub-heading">Dana Hotel</span><br />
+								660 N State Street, Chicago, IL 60654<br />
+								+1 312-202-6097 | <a href="https://www.yourreservation.net/tb3/?bf=HACHIDAN&iataNumber=WWGRP000A&rateAccessCode=*G00$&arrivaldate=2017-04-21&nights=2" alt="reservations">Online Reservations</a></p>
+
+								<p><span class="sub-heading">Hyatt Place River North</span><br />
+								66 W Illinois St, Chicago, IL 60654<br />
+								+1 888-735-2978 | <a href="https://aws.passkey.com/g/211854862">Online Reservations</a></p>
+								<p>Please be sure to mention the BONEVA-MOORE wedding when making your reservations</a>.</p>
 							</div>
 						</section>
 					</section>
