--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 								<h2>Accommodations</h2>
 								<p><span class="sub-heading">Dana Hotel</span><br />
 								660 N State Street, Chicago, IL 60654<br />
-								+1 312-202-6097 | <a href="https://www.yourreservation.net/tb3/?bf=HACHIDAN&iataNumber=WWGRP000A&rateAccessCode=*G00$&arrivaldate=2017-04-21&nights=2" alt="reservations">Online Reservations</a></p>
+								+1 312-202-6097 | <a href="https://www.yourreservation.net/tb3/?bf=HACHIDAN&iataNumber=WWGRP000A&rateAccessCode=*G00$&arrivaldate=2017-04-21&nights=2" alt="reservations">Online Reservations</a> | Book by March 10, 2017</p>
 
 								<p><span class="sub-heading">Hyatt Place River North</span><br />
 								66 W Illinois St, Chicago, IL 60654<br />
-								+1 888-735-2978 | <a href="https://aws.passkey.com/g/211854862">Online Reservations</a></p>
-								<p>Please be sure to mention the BONEVA-MOORE wedding when making your reservations</a>.</p>
+								+1 888-735-2978 | <a href="https://aws.passkey.com/g/211854862">Online Reservations</a> | Book by March 20, 2017</p>
+								<p>Please be sure to mention the BONEVA-MOORE wedding when making your reservations.</p>
 							</div>
 						</section>
 					</section>
