Remove RSVP and Guest Book buttons

--- a/index.html
+++ b/index.html
@@ -142,15 +142,15 @@
 								<p>- Iana & Shane</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">RSVP</a></li>
-								<li><a href="#" class="button fit">Guest Book</a></li>
+								<li><a href="#"></a></li>
+								<li><a href="#"></a></li>
 							</ul>
 						</div>
 					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
-						
+
 						<ul class="copyright">
 							<li>&copy; iana & shane</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
