--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	Spectral by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Iana & Shane</title>
@@ -107,28 +107,16 @@
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<h3>Amazon.com</h3>
-									<p>Coming soon</p>
-								</li>
+									<a href="https://www.amazon.com/wedding/share/iana-shane-chicago"><h3>Amazon.com</h3></a>
+                </li>
 								<li class="icon fa-laptop">
-									<h3>Macy's</h3>
-									<p>Coming soon</p>
+                  <a href="https://www.macys.com/wgl/registry/guest/6703410"><h3>Macy's</h3></a>
 								</li>
 								<li class="icon fa-code">
-									<h3>Nordstrom</h3>
-									<p>Coming soon</p>
+                  <a href="https://secure.williams-sonoma.com/registry/dpq7wpchhx/registry-list.html"><h3>Williams Sonoma</h3></a>
 								</li>
 								<li class="icon fa-headphones">
-									<h3>Crate and Barrel</h3>
-									<p>Coming soon</p>
-								</li>
-								<li class="icon fa-heart-o">
-									<h3>Target</h3>
-									<p>Coming soon</p>
-								</li>
-								<li class="icon fa-flag-o">
-									<h3>Other</h3>
-									<p>Coming soon</p>
+                  <a href="http://www.crateandbarrel.com/gift-registry/iana-boneva-and-shane-moore/r5629565"><h3>Crate and Barrel</h3></a>
 								</li>
 							</ul>
 						</div>
