--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Wedding Registry</h2>
-								<p>We've set up several registries for your convenience.</p>
+								<p>We've set up several <a href="https://goo.gl/rywMpe">registries</a> for your convenience.</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
